# com.unity.formats.alembic

./: .buginfo  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .repoconfig  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTIONS.md  ISSUE_TEMPLATE.md  LICENSE.md  LICENSE.txt  README.md  SConstruct  appcollector.yaml  build.cmd  build.py  build.sh  buildDebug.cmd  buildDebug.sh  buildingOnCentOS  clean_console_exemption_list.json  package.json.in  pvp_xray_exemptions.json  repack.sh  windows_codesign_list.txt
AlembicImporterPlugin/: AddLibraryPath.cpp  AddLibraryPath.vcxproj  AlembicExporter.h  AlembicExporter.vcxproj  AlembicExporter.vcxproj.filters  AlembicImporter.cpp  AlembicImporter.h  AlembicImporter.sln  AlembicImporter.vcxproj  AlembicImporter.vcxproj.filters  CMakeLists.txt  aiContext.cpp  aiContext.h  aiGeometry.cpp  aiGeometry.h  aiGraphicsDevice.cpp  aiGraphicsDevice.h  aiGraphicsDeviceD3D11.cpp  aiLogger.cpp  aiLogger.h  aiObject.cpp  aiObject.h  aiThreadPool.cpp  aiThreadPool.h  pch.h
AlembicImporterPlugin/Exporter/: AlembicExporter.cpp  AlembicExporter.h  aeCamera.cpp  aeCamera.h  aeContext.cpp  aeContext.h  aeObject.cpp  aeObject.h  aePoints.cpp  aePoints.h  aePolyMesh.cpp  aePolyMesh.h  aeXForm.cpp  aeXForm.h
AlembicImporterPlugin/GraphicsDevice/: aiGraphicsDevice.cpp  aiGraphicsDevice.h  aiGraphicsDeviceD3D11.cpp  aiGraphicsDeviceOpenGL.cpp
AlembicImporterPlugin/Importer/: AlembicImporter.cpp  AlembicImporter.h  aiCamera.cpp  aiContext.cpp  aiContext.h  aiObject.cpp  aiObject.h  aiPolyMesh.cpp  aiPolyMesh.h  aiSchema.h  aiXForm.cpp
AlembicImporterPlugin/Schema/: aiCamera.cpp  aiCamera.h  aiPoints.cpp  aiPoints.h  aiPolyMesh.cpp  aiPolyMesh.h  aiSchema.cpp  aiSchema.h  aiXForm.cpp  aiXForm.h
Plugin/: AlembicExporter.vcxproj  AlembicImporter.cpp  AlembicImporter.h  AlembicImporter.sln  AlembicImporter.vcxproj  AlembicImporter.vcxproj.filters  CMakeLists.txt  Info.plist  MeshUtils.vcxproj  README.txt  ThirdParty.txt  UnityAlembicImporter.cpp  UnityAlembicImporter.h  UnityAlembicImporter.sln  UnityAlembicImporter.vcxproj  UnityAlembicImporter.vcxproj.filters  abci.sln  abci.vcxproj  abci.vcxproj.filters  aiContext.cpp  aiContext.h  aiGeometry.cpp  aiGeometry.h  aiObject.cpp  aiObject.h  build.bat  build.sh  pch.h  setup.bat  setup.vcxproj
Plugin/Exporter/: AlembicExporter.cpp  AlembicExporter.h  aeCamera.cpp  aeCamera.h  aeContext.cpp  aeContext.h  aeObject.cpp  aeObject.h  aePoints.cpp  aePoints.h  aePolyMesh.cpp  aePolyMesh.h  aeXForm.cpp  aeXForm.h
Plugin/Foundation/: aiMisc.h  aiThreadPool.cpp  aiThreadPool.h
Plugin/GraphicsDevice/: aiGraphicsDevice.cpp  aiGraphicsDevice.h  aiGraphicsDeviceD3D11.cpp  aiGraphicsDeviceD3D9.cpp  aiGraphicsDeviceOpenGL.cpp
Plugin/Importer/: AlembicImporter.cpp  AlembicImporter.h  aiCamera.cpp  aiCamera.h  aiContext.cpp  aiContext.h  aiObject.cpp  aiObject.h  aiPoints.cpp  aiPoints.h  aiPolyMesh.cpp  aiPolyMesh.h  aiProperty.cpp  aiProperty.h  aiSchema.cpp  aiSchema.h  aiXForm.cpp  aiXForm.h
Plugin/MeshUtils/: CMakeLists.txt  muSIMDConfig.h
Plugin/Test/: CMakeLists.txt  ExportAlembic.cpp  MeshGenerator.cpp  MeshGenerator.h  Test.cpp  Test.h  Test.vcxproj  Test.vcxproj.filters  pch.h
Plugin/Tools/: AddDLLSearchPath.vcxproj  AddDLLSearchPath.vcxproj.filters  Common.cpp  Common.h  Concurrency.h  MeshTriangulator.vcxproj  MeshTriangulator.vcxproj.filters  PartioPlugin.vcxproj  PartioPlugin.vcxproj.filters  PointsExpander.vcxproj  PointsExpander.vcxproj.filters  PointsRandomizer.vcxproj  PointsRandomizer.vcxproj.filters  TextureWriter.vcxproj  TextureWriter.vcxproj.filters  pch.h
Plugin/Tools/AddDLLSearchPath/: AddDLLSearchPath.cpp
Plugin/Tools/Common/: AlembicProcessor.cpp  AlembicProcessor.h  Concurrency.h  Foundation.cpp  Foundation.h
Plugin/Tools/GraphicsDevice/: GraphicsDevice.cpp  GraphicsDevice.h  GraphicsDeviceD3D11.cpp  GraphicsDeviceD3D9.cpp  GraphicsDeviceOpenGL.cpp
Plugin/Tools/MeshTriangulator/: MeshTriangulator.cpp
Plugin/Tools/PartioPlugin/: PartioPlugin.cpp  PartioPlugin.h  pch.cpp  pch.h  ppCache.cpp  ppCache.h  ppContext.cpp  ppContext.h
Plugin/Tools/PointsExpander/: PointsExpander.cpp
Plugin/Tools/PointsRandomizer/: PointsRandomizer.cpp
Plugin/Tools/TextureWriter/: TextureWriter.cpp  TextureWriter.h
Plugin/abci/: CMakeLists.txt  abci.h  pch.cpp  pch.h
Plugin/abci/Exporter/: AlembicExporter.cpp  AlembicExporter.h  aeCamera.cpp  aeCamera.h  aeContext.cpp  aeContext.h  aeObject.cpp  aeObject.h  aePoints.cpp  aePoints.h  aePolyMesh.cpp  aePolyMesh.h  aeXForm.cpp  aeXForm.h
Plugin/abci/Foundation/: RawVector.h  aiIntrusiveArray.h  aiLogger.cpp  aiLogger.h  aiMath.cpp  aiMath.h  aiMeshOps.cpp  aiMeshOps.h  aiMisc.h  aiSIMD.ispc  aiThreadPool.cpp  aiThreadPool.h  ispcmath.h
Plugin/abci/Importer/: AlembicImporter.cpp  AlembicImporter.h  aiAsync.cpp  aiAsync.h  aiCamera.cpp  aiCamera.h  aiContext.cpp  aiContext.h  aiObject.cpp  aiObject.h  aiPoints.cpp  aiPoints.h  aiPolyMesh.cpp  aiPolyMesh.h  aiProperty.cpp  aiProperty.h  aiSchema.cpp  aiSchema.h  aiTimeSampling.cpp  aiTimeSampling.h  aiXForm.cpp  aiXForm.h
Plugin/abci/test/: CMakeLists.txt  abci_test.cc
Plugin/cmake/: AddPlugin.cmake  FindAlembic.cmake  FindHDF5.cmake  FindISPC.cmake  FindOpenEXR.cmake  ISPC.cmake
Source/: CMakeLists.txt  README.txt  abci.sln  abci.vcxproj  abci.vcxproj.filters  buildtools.bat  setup.vcxproj
Source/Test/: CMakeLists.txt  ExportAlembic.cpp  MeshGenerator.cpp  MeshGenerator.h  Test.cpp  Test.h  Test.vcxproj  pch.h
Source/abci/: CMakeLists.txt  abci.h  pch.h  version-script-macos.txt  version-script.txt
Source/abci/Exporter/: AlembicExporter.cpp  AlembicExporter.h  aeCamera.cpp  aeCamera.h  aeContext.cpp  aeContext.h  aeInternal.h  aeObject.cpp  aeObject.h  aePoints.cpp  aePoints.h  aePolyMesh.cpp  aePolyMesh.h  aeXForm.cpp  aeXForm.h
Source/abci/Foundation/: AlignedVector.h  Allocator.cpp  Allocator.h  RawVector.h  Vector.h  aiIntrusiveArray.h  aiIterator.h  aiLogger.cpp  aiLogger.h  aiMath.cpp  aiMath.h  aiMeshOps.cpp  (+4 more)
Source/cmake/: AddPlugin.cmake
(+728 files in other folders)
